conky config - remove noot for testing

--- a/conky/conky.conf
+++ b/conky/conky.conf
@@ -35,7 +35,7 @@ ${else}[MM] | \
 ${endif}\
 ^fg(\#b58900)${hwmon 1 temp 1}°C | \
 ^fg(\#2aa198)${execpi 300 cat /sys/class/power_supply/BAT0/capacity}% | \
-^fg(\#839496)CPU noot ${cpu cpu0} ${cpu cpu1} | \
+^fg(\#839496)CPU ${cpu cpu0} ${cpu cpu1} | \
 ^fg(\#b58900)${mem} | \
 ^fg(\#859900)${time %a %d %m/%y} \
 ^fg(\#eee8d5)${time %R} \
