added libreoffice to .gitignore, weechat modifs

--- a/weechat/irc.conf
+++ b/weechat/irc.conf
@@ -178,7 +178,7 @@ freenode.local_hostname
 freenode.usermode
 freenode.command
 freenode.command_delay
-freenode.autojoin
+freenode.autojoin = "#archlinux,#archlinux-offtopic,#archlinux-newbie"
 freenode.autorejoin
 freenode.autorejoin_delay
 freenode.connection_timeout
@@ -191,47 +191,6 @@ freenode.msg_part
 freenode.msg_quit
 freenode.notify
 freenode.split_msg_max_length
-irc.mozilla.org.addresses = "-autoconnect"
-irc.mozilla.org.proxy
-irc.mozilla.org.ipv6
-irc.mozilla.org.ssl = on
-irc.mozilla.org.ssl_cert
-irc.mozilla.org.ssl_priorities
-irc.mozilla.org.ssl_dhkey_size
-irc.mozilla.org.ssl_fingerprint
-irc.mozilla.org.ssl_verify
-irc.mozilla.org.password
-irc.mozilla.org.capabilities
-irc.mozilla.org.sasl_mechanism
-irc.mozilla.org.sasl_username
-irc.mozilla.org.sasl_password
-irc.mozilla.org.sasl_key
-irc.mozilla.org.sasl_timeout
-irc.mozilla.org.sasl_fail
-irc.mozilla.org.autoconnect = on
-irc.mozilla.org.autoreconnect
-irc.mozilla.org.autoreconnect_delay
-irc.mozilla.org.nicks
-irc.mozilla.org.nicks_alternate
-irc.mozilla.org.username
-irc.mozilla.org.realname
-irc.mozilla.org.local_hostname
-irc.mozilla.org.usermode
-irc.mozilla.org.command
-irc.mozilla.org.command_delay
-irc.mozilla.org.autojoin
-irc.mozilla.org.autorejoin
-irc.mozilla.org.autorejoin_delay
-irc.mozilla.org.connection_timeout
-irc.mozilla.org.anti_flood_prio_high
-irc.mozilla.org.anti_flood_prio_low
-irc.mozilla.org.away_check
-irc.mozilla.org.away_check_max_nicks
-irc.mozilla.org.msg_kick
-irc.mozilla.org.msg_part
-irc.mozilla.org.msg_quit
-irc.mozilla.org.notify
-irc.mozilla.org.split_msg_max_length
 mozilla.addresses = "irc.mozilla.org/6697"
 mozilla.proxy
 mozilla.ipv6
@@ -260,7 +219,7 @@ mozilla.local_hostname
 mozilla.usermode
 mozilla.command
 mozilla.command_delay
-mozilla.autojoin
+mozilla.autojoin = "#rust-beginners"
 mozilla.autorejoin
 mozilla.autorejoin_delay
 mozilla.connection_timeout
