--- a/weechat/weechat.conf
+++ b/weechat/weechat.conf
@@ -329,6 +329,15 @@ title.size_max = 0
 title.type = window
 
 [layout]
+default.buffer = "core;weechat;1"
+default.buffer = "irc;server.mozilla;2"
+default.buffer = "irc;server.freenode;3"
+default.buffer = "irc;freenode.#archlinux;4"
+default.buffer = "irc;freenode.#archlinux-offtopic;5"
+default.buffer = "irc;mozilla.#rust-beginners;6"
+default.buffer = "irc;freenode.#archlinux-newbie;7"
+default.window = "1;0;0;0;core;weechat"
+default.current = on
 
 [notify]
 
