--- a/weechat/plugins.conf
+++ b/weechat/plugins.conf
@@ -10,6 +10,7 @@
 #
 
 [var]
+python.autojoin.autosave = "off"
 python.buffer_autoclose.age_limit = "30"
 python.buffer_autoclose.ignore = ""
 python.buffer_autoclose.interval = "1"
