--- a/qutebrowser/qsettings/QtProject.conf
+++ b/qutebrowser/qsettings/QtProject.conf
@@ -1,7 +1,7 @@
 [FileDialog]
-history=file:///home/aidan/jobs
-lastVisited=file:///home/aidan/jobs
-qtVersion=5.10.1
+history=file:///home/aidan/jobs, file:///home/aidan/Downloads
+lastVisited=file:///home/aidan/Downloads
+qtVersion=5.11.0
 shortcuts=file:, file:///home/aidan
 sidebarWidth=90
 treeViewHeader=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x1\xec\0\0\0\x4\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x4\0\0\0\xff\0\0\0\x1\0\0\0\0\0\0\0?\0\0\0\x1\0\0\0\0\0\0\0@\0\0\0\x1\0\0\0\0\0\0\0n\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\xff\xff\xff\xff)
