added makepkg compilation script

--- a/qutebrowser/qsettings/QtProject.conf
+++ b/qutebrowser/qsettings/QtProject.conf
@@ -1,6 +1,6 @@
 [FileDialog]
-history=file:///home/aidan/jobs, file:///home/aidan/Downloads
-lastVisited=file:///home/aidan/Downloads
+history=file:///home/aidan/jobs, file:///home/aidan/Downloads, file:///home/aidan
+lastVisited=file:///home/aidan/jobs
 qtVersion=5.11.0
 shortcuts=file:, file:///home/aidan
 sidebarWidth=90
