--- a/pacman/pacman.conf
+++ b/pacman/pacman.conf
@@ -22,7 +22,7 @@ Architecture = auto
 
 # Pacman won't upgrade packages listed in IgnorePkg and members of IgnoreGroup
 #IgnorePkg   =
-#IgnoreGroup = modified
+IgnoreGroup = modified
 
 #NoUpgrade   =
 #NoExtract   =
