--- a/rtorrent/rtorrent.rc
+++ b/rtorrent/rtorrent.rc
@@ -53,7 +53,7 @@ port_range = 49164-49164
 check_hash = yes
 
 # Set whether the client should try to connect to UDP trackers.
-use_udp_trackers = yes
+#use_udp_trackers = yes
 
 # Alternative calls to bind and ip that should handle dynamic ip's.
 #schedule = ip_tick,0,1800,ip=rakshasa
@@ -82,7 +82,7 @@ dht_port = 49164
 
 # Enable peer exchange (for torrents not marked private)
 #
-peer_exchange = yes
+#peer_exchange = yes
 
 
 #color_inactive_fg = 4
