modified alsa-base.conf, added some fn to .bashrc

--- a/conky/conky.conf
+++ b/conky/conky.conf
@@ -33,9 +33,9 @@ ${if_match "${exec amixer -c 0 get Master |grep Mono: | cut -c3- | cut -d' ' -f6
 ${exec amixer -c 0 get Master | grep Mono: | cut -d " " -f6 | cut -c1-6} | \
 ${else}[MM] | \
 ${endif}\
-^fg(\#b58900)${hwmon 1 temp 1}°C | \
-^fg(\#2aa198)${execpi 300 cat /sys/class/power_supply/BAT0/capacity}% | \
-^fg(\#839496)CPU ${cpu cpu0} ${cpu cpu1} | \
+^fg(\#b58900)${exec sensors | sed -n '3p' | cut -c16-22} | \
+^fg(\#2aa198)${exec sensors | sed -n '10p' | cut -c16-22} | \
+^fg(\#839496)CPU ${cpu cpu0} | \
 ^fg(\#b58900)${mem} | \
 ^fg(\#859900)${time %a %d %m/%y} \
 ^fg(\#eee8d5)${time %R} \
