--- a/QtProject.conf
+++ b/QtProject.conf
@@ -1,7 +1,7 @@
 [FileDialog]
-history=file:///home/aidan/.rtorrent-session/Steven Erikson/Dust of Dreams (5123), file:///home/aidan/.rtorrent-session/Steven Erikson/Deadhouse Gates (5119), file:///home/aidan/.rtorrent-session, file:///home/aidan, file:///home/aidan/media/books
-lastVisited=file:///home/aidan/media/books
-qtVersion=5.12.3
+history=file:///home/aidan/media/books/Calibre Library, file:///home/aidan/Downloads, file:///home/aidan/cross-stitch/zine-submission, file:///home/aidan/phi, file:///home/aidan/phi/lectures
+lastVisited=file:///home/aidan/Downloads
+qtVersion=5.13.1
 shortcuts=file:, file:///home/aidan
 sidebarWidth=94
 treeViewHeader=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x2\xf8\0\0\0\x4\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x4\0\0\x1\xfe\0\0\0\x1\0\0\0\0\0\0\0\x43\0\0\0\x1\0\0\0\0\0\0\0\x44\0\0\0\x1\0\0\0\0\0\0\0s\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\xff\xff\xff\xff)
