--- a/keyboard/10-keyboard.conf
+++ b/keyboard/10-keyboard.conf
@@ -4,5 +4,6 @@ Section "InputClass"
 	Option 			"XkbLayout" "us(dvp)"
 #	Option			"XkbVariant" "dvp,multi"
 	#Option			"XkbOptions" "grp:alt_space_toggle,ctrl:swapcaps"
+	Option			"XkbOptions" "ctrl:swapcaps"
 EndSection
 
