--- a/qutebrowser/qsettings/QtProject.conf
+++ b/qutebrowser/qsettings/QtProject.conf
@@ -1,7 +1,7 @@
 [FileDialog]
-history=file:///home/aidan/.local/share/Terraria/Players, file:///home/aidan/Downloads, file:///home/aidan, file:///tmp, file:///home/aidan/.rtorrent-session
-lastVisited=file:///home/aidan
-qtVersion=5.13.1
+history=file:///tmp, file:///home/aidan/.rtorrent-session, file:///home/aidan/phi/travail-mi-session, file:///home/aidan/phi/dissertation-finale, file:///home/aidan/phi/dissertation-finale/dissertation
+lastVisited=file:///home/aidan/phi/dissertation-finale/dissertation
+qtVersion=5.13.2
 shortcuts=file:, file:///home/aidan
 sidebarWidth=90
 treeViewHeader=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\x1\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x2\xa3\0\0\0\x4\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x4\0\0\0\xff\0\0\0\x1\0\0\0\0\0\0\0?\0\0\0\x1\0\0\0\0\0\0\0@\0\0\0\x1\0\0\0\0\0\0\x1%\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\xff\xff\xff\xff)
