--- a/qutebrowser/autoconfig.yml
+++ b/qutebrowser/autoconfig.yml
@@ -6,5 +6,6 @@
 
 config_version: 2
 settings:
-  content.notifications:
-    https://www.reddit.com: false
+  content.geolocation:
+    https://myfirewatch.landgate.wa.gov.au: false
+    https://www.theguardian.com: false
