before configuring xmonad

--- a/keyboard/10-keyboard.conf
+++ b/keyboard/10-keyboard.conf
@@ -1,9 +1,8 @@
 Section "InputClass"
 	Identifier		"Keyboard Defaults"
 	MatchIsKeyboard		"yes"
-	Option 			"XkbLayout" "us(dvp)"
-#	Option			"XkbVariant" "dvp,multi"
-	#Option			"XkbOptions" "grp:alt_space_toggle,ctrl:swapcaps"
-	Option			"XkbOptions" "ctrl:swapcaps"
+	Option 			"XkbLayout" "us"
+	Option			"XkbVariant" "dvp"
+	Option			"XkbOptions" "ctrl:swapcaps,lv3:ralt_switch"
 EndSection
 
