--- a/lutris/lutris.conf
+++ b/lutris/lutris.conf
@@ -1,10 +1,21 @@
 [lutris]
 migration_version = 5
-width = 1366
-height = 747
+width = 1270
+height = 947
 maximized = False
 runners_manager_width = 1366
 runners_manager_height = 768
 create_desktop_shortcut = False
 create_menu_shortcut = False
+filter_installed = False
+view_type = list
+
+[list view]
+name_column_width = 200
+year_column_width = 60
+runner_column_width = 120
+platform_column_width = 120
+lastplayed_column_width = 204
+installedat_column_width = 120
+playtime_column_width = 100
 
