--- a/qutebrowser/qsettings/QtProject.conf
+++ b/qutebrowser/qsettings/QtProject.conf
@@ -1,8 +1,8 @@
 [FileDialog]
-history=file:///home/aidan/phi/travail-mi-session, file:///home/aidan/phi/dissertation-finale, file:///home/aidan/phi/dissertation-finale/dissertation, file:///home/aidan/media/games/snes/super-metroid, file:///home/aidan/documents/work-stuff/resume/electrician
-lastVisited=file:///home/aidan/documents/work-stuff/resume/electrician
-qtVersion=5.14.1
+history=file:///home/aidan, file:///home/aidan/.local/share/Terraria/Worlds, file:///home/aidan/documents/work-stuff/resume/electrician, file:///tmp, file:///home/aidan/cross-stitch/doodle-camping-05-04-2020, file:///home/aidan/ara/exam/pdf
+lastVisited=file:///home/aidan/ara/exam/pdf
+qtVersion=5.14.2
 shortcuts=file:, file:///home/aidan
 sidebarWidth=90
-treeViewHeader=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\x1\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x2\xa3\0\0\0\x4\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x4\0\0\0\xff\0\0\0\x1\0\0\0\0\0\0\0?\0\0\0\x1\0\0\0\0\0\0\0@\0\0\0\x1\0\0\0\0\0\0\x1%\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\xff\xff\xff\xff)
+treeViewHeader=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x2\xa3\0\0\0\x4\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x4\0\0\0\xff\0\0\0\x1\0\0\0\0\0\0\0?\0\0\0\x1\0\0\0\0\0\0\0@\0\0\0\x1\0\0\0\0\0\0\x1%\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\xff\xff\xff\xff)
 viewMode=Detail
