--- a/qutebrowser/autoconfig.yml
+++ b/qutebrowser/autoconfig.yml
@@ -6,6 +6,5 @@
 
 config_version: 2
 settings:
-  content.geolocation:
-    https://myfirewatch.landgate.wa.gov.au: false
-    https://www.theguardian.com: false
+  content.register_protocol_handler:
+    https://mail.google.com?extsrc=mailto&url=%25s: false
