--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 chromium/*
+skypeforlinux/*
 .git/
 cmus/resume
 cmus/queue.pl
@@ -22,4 +23,4 @@ weechat/weechat.log
 libreoffice/*
 GIMP/*
 VirtualBox/*
-leela/networks/*.gz
+leela/*
